--- a/EcommerceFullStackProject/views/layout.pug
+++ b/EcommerceFullStackProject/views/layout.pug
@@ -7,6 +7,8 @@ html(lang="en")
     meta(name="theme-color" content="#004e89")
     title E-Shop - Your Ultimate Online Store
     link(rel="stylesheet", href="/stylesheets/style.css")
+    link(rel="stylesheet", href="/stylesheets/responsive.css")
+
   body
     header.site-header
       nav.navbar
