--- a/EcommerceFullStackProject/public/stylesheets/responsive.css
+++ b/EcommerceFullStackProject/public/stylesheets/responsive.css
@@ -66,6 +66,9 @@ img {
     padding: 0.75rem 1rem !important;
     font-size: 1rem !important;
   }
+  .hero h1 {
+    margin-top: 14px !important;
+  }
 
   /* hero layout */
   .hero-inner {
