--- a/EcommerceFullStackProject/views/partials/footer.pug
+++ b/EcommerceFullStackProject/views/partials/footer.pug
@@ -1,2 +1,74 @@
-footer
-  p © 2025 E-Commerce Project
+﻿footer.site-footer
+  .footer-top.container
+    .footer-brand.footer-col
+      a.footer-logo(href="/") E-Shop
+      p.footer-tagline
+        | A clean full-stack ecommerce demo with bold visuals and dummy links
+        | that actually open working pages.
+      .footer-socials
+        a.social-link(href="/about" aria-label="About") X
+        a.social-link(href="/blogs" aria-label="Blogs") IG
+        a.social-link(href="/team" aria-label="Team") IN
+        a.social-link(href="/contact" aria-label="Contact") FB
+
+    .footer-col
+      h4.footer-title Company
+      ul.footer-links
+        li
+          a(href="/") Home
+        li
+          a(href="/about") About
+        li
+          a(href="/blogs") Blogs
+        li
+          a(href="/contact") Contact Us
+        li
+          a(href="/faqs") FAQs
+
+    .footer-col
+      h4.footer-title Policy
+      ul.footer-links
+        li
+          a(href="/compare") Compare
+        li
+          a(href="/team") Team
+        li
+          a(href="/privacy") Privacy Policy
+        li
+          a(href="/terms") Terms & Conditions
+
+    .footer-col
+      h4.footer-title Categories
+      ul.footer-links
+        li
+          a(href="/shop?category=Electronics") Electronics
+        li
+          a(href="/shop?category=Clothing") Clothing
+        li
+          a(href="/shop?category=Accessories") Accessories
+        li
+          a(href="/shop?category=Shoes") Shoes
+        li
+          a(href="/shop?category=T-Shirts") T-Shirts
+
+    .footer-col.footer-address
+      h4.footer-title Address
+      ul.footer-contact
+        li
+          span.contact-icon Location
+          span 742 Evergreen Ave, Columbus, OH 90280
+        li
+          span.contact-icon Email
+          a(href="mailto:hello@eshop.dev") hello@eshop.dev
+        li
+          span.contact-icon Phone
+          a(href="tel:+13866883295") +1 (386) 688-3295
+
+  .footer-bottom
+    .container.footer-bottom-inner
+      p.footer-copy
+        | © 2026 E-Shop - All Rights Reserved.
+      .footer-mini-links
+        a(href="/terms") Terms
+        a(href="/privacy") Privacy
+        a(href="/contact") Support
